errors.txt
/var/spool/slurmd/job23136/slurm_script: line 11: module: command not found
/var/spool/slurmd/job23136/slurm_script: line 12: module: command not found
bellman_ford_parallel_dest.c: In function ‘main’:
bellman_ford_parallel_dest.c:126:31: error: ‘result’ is a pointer; did you mean to use ‘->’?
  126 |         hasCicle[2*i] = result.hasNegativeCycle;
      |                               ^
      |                               ->
bellman_ford_parallel_dest.c:127:9: error: ‘times’ undeclared (first use in this function); did you mean ‘time’?
  127 |         times[2*i] = result.timeInSeconds;
      |         ^~~~~
      |         time
bellman_ford_parallel_dest.c:127:9: note: each undeclared identifier is reported only once for each function it appears in
bellman_ford_parallel_dest.c:127:28: error: ‘result’ is a pointer; did you mean to use ‘->’?
  127 |         times[2*i] = result.timeInSeconds;
      |                            ^
      |                            ->
bellman_ford_parallel_dest.c:133:47: error: ‘readGraphNegativeCycle’ undeclared (first use in this function); did you mean ‘createGraphNoNegativeCycle’?
  133 |         result = bellmanFord(power_of_two(i), readGraphNegativeCycle, 0);
      |                                               ^~~~~~~~~~~~~~~~~~~~~~
      |                                               createGraphNoNegativeCycle
bellman_ford_parallel_dest.c:135:21: error: ‘resultCycle’ undeclared (first use in this function)
  135 |         writeResult(resultCycle, filename, true);
      |                     ^~~~~~~~~~~
bellman_ford_parallel_dest.c:136:33: error: ‘result’ is a pointer; did you mean to use ‘->’?
  136 |         hasCicle[2*i+1] = result.hasNegativeCycle;
      |                                 ^
      |                                 ->
bellman_ford_parallel_dest.c:137:30: error: ‘result’ is a pointer; did you mean to use ‘->’?
  137 |         times[2*i+1] = result.timeInSeconds;
      |                              ^
      |                              ->
bellman_ford_parallel_dest.c:109:12: warning: unused variable ‘time’ [-Wunused-variable]
  109 |     double time[18];
      |            ^~~~
make: *** [Makefile:86: obj/bellman_ford_parallel_dest.o] Error 1
